--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.4.0",
-		"dotenv": "^16.3.1"
+		"dotenv": "^16.3.1",
+		"svelte-icons-pack": "^2.1.0"
 	}
 }
